--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "esbuild": "^0.7.15"
+  },
+  "scripts": {
+    "start": "cd static && npx static-server"
   }
 }
